--- a/Edkul/app/src/main/res/values/strings.xml
+++ b/Edkul/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Edkul</string>
     <string name="action_settings">Settings</string>
     <string name="welcomePage">Welcome to Edkul</string>
+    <string name="loginEmail">Email</string>
+    <string name="loginPassword">Password</string>
+    <string name="loginButton">Login</string>
+    <string name="forgotPass">Forgot Password?</string>
+    <string name="notonEdkul">Not on Edkul?</string>
+    <string name="joinNow">Join Now</string>
 </resources>
