--- a/Edkul/app/src/main/res/values/strings.xml
+++ b/Edkul/app/src/main/res/values/strings.xml
@@ -8,4 +8,46 @@
     <string name="forgotPass">Forgot Password?</string>
     <string name="notonEdkul">Not on Edkul?</string>
     <string name="joinNow">Join Now</string>
+    <string name="title_activity_recover_password">RecoverPassword</string>
+    <string name="recoverPassword">Recover Your password</string>
+    <string name="enterMail">Enter Your Mail ID</string>
+    <string name="recoverymailAddress">Email</string>
+    <string name="title_activity_join__as_">Join_AS_A</string>
+    <string name="joinAsA">Join As A ...</string>
+    <string name="joinasaStudent">Student</string>
+    <string name="joinasaTeacher">Teacher</string>
+    <string name="joinasaparent">Parent</string>
+    <string name="joinNext">Next</string>
+    <string name="title_activity_student__signup">Student_Signup</string>
+    <string name="studentSignup">SignUp</string>
+    <string name="studentName">Name:</string>
+    <string name="studentEmail">Email</string>
+    <string name="studentPassword">Password</string>
+    <string name="studentcPassword">Confirm Password</string>
+    <string name="studentContact">Conatct No.</string>
+    <string name="title_activity_teacher__signup">Teacher_Signup</string>
+    <string name="teacherSignup">SignUp</string>
+    <string name="teacherName">Teacher name</string>
+    <string name="teacherEmail">Email</string>
+    <string name="teacherPassword">Password</string>
+    <string name="teachercPassword">Confirm Password</string>
+    <string name="teacherContact">Contact No.</string>
+    <string name="teacherInstitute">Institute Name</string>
+    <string name="title_activity_parent__signup">Parent_Signup</string>
+    <string name="parentSignup">SignUp</string>
+    <string name="parentName">ParentName</string>
+    <string name="parentEmail">Email</string>
+    <string name="parentPassword">Password</string>
+    <string name="parentCPassword">Confirm Password</string>
+    <string name="parentContact">Contact No.</string>
+    <string name="parent_studentName">StudentName</string>
+    <string name="instituteName">Institute</string>
+    <string name="nextButton2">Next</string>
+    <string name="title_activity_forgot_password">ForgotPassword</string>
+    <string name="changePassword">Change Your Password</string>
+    <string name="title_activity_user_profile">UserProfile</string>
+    <string name="userprofile">Layout for this page and next pages after that</string>
+    <string name="studentProfile">UserProfile</string>
+    <string name="submitStudent">Submit</string>
+    <string name="studentInstitute">Name</string>
 </resources>
