--- a/Edkul/app/src/main/res/values/strings.xml
+++ b/Edkul/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="studentProfile">UserProfile</string>
     <string name="submitStudent">Submit</string>
     <string name="studentInstitute">Name</string>
+    <string name="teacherSubmit">Submit</string>
+    <string name="parentSubmit">Submit</string>
 </resources>
