Match the login info with the database

--- a/Edkul/app/src/main/res/values/strings.xml
+++ b/Edkul/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="studentInstitute">Name</string>
     <string name="teacherSubmit">Submit</string>
     <string name="parentSubmit">Submit</string>
+    <string name="profile">Profile</string>
 </resources>
