--- a/Edkul/app/src/main/res/values/strings.xml
+++ b/Edkul/app/src/main/res/values/strings.xml
@@ -83,4 +83,6 @@
     <string name="title_activity_library">Library</string>
     <string name="title_activity_marketing">Marketing</string>
     <string name="title_activity_updates">Updates</string>
+    <string name="courseName">Course Name</string>
+    <string name="subscribeText">Subscribe</string>
 </resources>
